--- a/src/main/resources/templates/user-logout.html
+++ b/src/main/resources/templates/user-logout.html
@@ -1,6 +1,7 @@
 
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+    <link rel="stylesheet" href="bootstrap.css">
 </head>
 <body>
 <a href="/logout">Выход</a>
