--- a/src/main/resources/templates/user-login.html
+++ b/src/main/resources/templates/user-login.html
@@ -1,28 +1,23 @@
-<html xmlns:th="http://www.thymeleaf.org">
+<!doctype html>
+<html lang="ru" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Авторизация</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Login page</title>
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="bootstrap.css">
+    <link href="signin.css" rel="stylesheet">
 </head>
 <body>
-<form class="your-form-selector" method="post" action="/login">
-    <table width="100%" cellspacing="0" cellpadding="4">
-        <tr>
-            <td></td>
-            <td>Введите:</td>
-        </tr>
-        <tr>
-            <td align="right" width="100">UserName:</td>
-            <td><input type="text" name="username" maxlength="50" size="20" required placeholder></td>
-        </tr>
-        <tr>
-            <td align="right" width="100">Password:</td>
-            <td><input type="password" name="password" maxlength="50" size="20" required placeholder></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td><input type="submit" value="Войти"></td>
-        </tr>
-        </tr>
-    </table>
-    <p th:text="${status}"></p>
+<form class="form-signin" method="post" action="/login">
+    <h1 class="h3 mb-3 font-weight-normal" align="left">Please sign in</h1>
+    <label for="username" class="sr-only">Email address</label>
+    <input type="email" id="username" class="form-control" name="username" placeholder="Email address" required
+           autofocus>
+    <label for="password" class="sr-only">Password</label>
+    <input type="password" id="password" class="form-control" name="password" placeholder="Password" required>
+    <button class="btn btn-lg btn-info btn-block " type="submit">Sign in</button>
+    </br><p class="h6 mb-3 font-weight-light" th:text="${status}"></p>
+</form>
 </body>
 </html>
